k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-backend
  namespace: task-manager
spec:
  replicas: 2

  selector:
    matchLabels:
      app: task-manager-backend

  template:
    metadata:
      labels:
        app: task-manager-backend

    spec:
      containers:
        - name: backend
          image: pavanreddy1999/taskmanager-backend:7

          ports:
            - containerPort: 5000
              name: http

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
