k8s/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-frontend
  namespace: task-manager
spec:
  replicas: 2

  selector:
    matchLabels:
      app: task-manager-frontend

  template:
    metadata:
      labels:
        app: task-manager-frontend

    spec:
      containers:
        - name: frontend
          image: pavanreddy1999/taskmanager-frontend:v3

          ports:
            - containerPort: 80
              name: http

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
